--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Provincias y Web Storage</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-    <h1>Provincias y Web Storage</h>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <h1>Provincias y Web Storage</h1>
+    <section id="grid-provincias">
+      <!-- Llenar con las provincias -->
+    </section>
     <!-- Vinculación de JS -->
     <script src="./js/script.js" type="module"></script>
-</body>
+  </body>
 </html>
